class changes wizard breadcrumbs

--- a/register_flow/03/index.html
+++ b/register_flow/03/index.html
@@ -226,7 +226,7 @@
                     <div class="order-xl-2 col-xl-4">
                         <div class="completion-score incomplete"><div class="text"><!-- react-text: 113 -->Completion Rate: <!-- /react-text --><!-- react-text: 114 -->45<!-- /react-text --><!-- react-text: 115 -->%<!-- /react-text --></div><div class="fit-progress-bar"><span class="fill" style="width: 45%;"></span></div></div>
                     </div>
-                    <div class="order-xl-1 col-xl-8">
+                    <div class="order-xl-1 col-xl-8 mt-3 mt-xl-0 d-flex justify-content-xl-start justify-content-lg-center">
 <button name="general_info" class="active"><span class="rounded-circle">1</span><!-- react-text: 101 -->General Info<!-- /react-text --></button><button name="about_yourslef" class="active"><span class="rounded-circle">2</span><!-- react-text: 104 -->About Yourself<!-- /react-text --></button><button name="connected_accounts" class="active"><span class="rounded-circle">3</span><!-- react-text: 107 -->Connected Accounts<!-- /react-text --></button><button name="upgrade" class="disabled"><span class="rounded-circle">4</span><!-- react-text: 110 -->Choose A Plan<!-- /react-text --></button>
                         
                     </div>
@@ -309,7 +309,7 @@
                 </footer>
             </div>
         </div>
-        <div class="backdrop d-xl-none"></div>
+       
     </div>
     <img height="1" width="1" style="display:none" src="./Argon Dashboard PRO React by Creative Tim_files/tr">
 
