--- a/register_flow/04/index.html
+++ b/register_flow/04/index.html
@@ -241,7 +241,7 @@
                                  <div class="fit-progress-bar"><span class="fill" style="width: 60%;"></span></div>
                              </div>
                          </div>
-                         <div class="order-xl-1 col-xl-8">
+                         <div class="order-xl-1 col-xl-8 mt-3 mt-xl-0 d-flex justify-content-xl-start justify-content-lg-center">
                              <button name="general_info" class="active"><span class="rounded-circle">1</span><!-- react-text: 101 -->General Info
                                  <!-- /react-text --></button><button name="about_yourslef" class="active"><span class="rounded-circle">2</span><!-- react-text: 104 -->About Yourself
                                  <!-- /react-text --></button><button name="connected_accounts" class="active"><span class="rounded-circle">3</span><!-- react-text: 107 -->Connected Accounts
@@ -546,7 +546,7 @@
                  </footer>
              </div>
          </div>
-         <div class="backdrop d-xl-none"></div>
+         
      </div>
      <img height="1" width="1" style="display:none" src="./Argon Dashboard PRO React by Creative Tim_files/tr">
 
