--- a/emails/confirmEmail.html
+++ b/emails/confirmEmail.html
@@ -581,7 +581,7 @@
                   mso-padding-alt: 0px;
                   text-rendering: optimizeLegibility;
                 ">
-                You’re receiving this email because you've created an account on Weshare.net Weshare inc.  Derech Menachem Begin 144, Tel Aviv, Israel.
+                You’re receiving this email because you've created an account on Weshare.net Weshare inc.  600 N Broad Street, Suite 5 # 562 Middletown, DE 19709, USA.
               </p>
             </div>
             <div class="space-20" style="height: 20px;">&nbsp;</div>
