--- a/emails/invite.html
+++ b/emails/invite.html
@@ -545,7 +545,7 @@
         </tr>
         <tr>
           <td class="content" style="padding-left: 40px; padding-right: 40px;">
-        <div class="wrapper-button big" style="margin-top: 0px !important;">
+        <div class="wrapper-button big" style="margin-top: 0px !important;text-align: center;">
 
              
               <a class="button big" href="https://www.weshare.net/invite?id={inviteId}" style="
@@ -564,6 +564,7 @@
                   text-align: center;
                   text-decoration: none;
                   transition: background-color 0.2s;
+                                                                                               
                 ">Claim your invitation</a>
 
               <!--[if mso]>
@@ -641,7 +642,7 @@
                   mso-padding-alt: 0px;
                   text-rendering: optimizeLegibility;
                 ">
-                You’re receiving this email because you were invited by dfgoin@gmail.com to use Weshare. Weshare inc. , Derech Menachem Begin 144, Tel Aviv, Israel.
+                You’re receiving this email because you were invited by dfgoin@gmail.com to use Weshare. Weshare inc. , 600 N Broad Street, Suite 5 # 562 Middletown, DE 19709, USA.
               </p>
             </div>
             <div class="space-20" style="height: 20px;">&nbsp;</div>
