--- a/emails/email_reminders/customer/orderConfirmation.html
+++ b/emails/email_reminders/customer/orderConfirmation.html
@@ -414,7 +414,7 @@
         visibility: hidden;
         width: 0;
       ">
-      You've scheduled a new meeting!
+      You've scheduled a new appointment!
     </div>
     <div class="description-spacer" style="display: none; max-height: 0px; overflow: hidden;">
       &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;‌&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
@@ -476,7 +476,7 @@
                         max-width: 500px;
                         padding: 0;
                       ">
-                      Your Meeting Has Been Set.
+                      Your Appointment Has Been Set.
                     </h1>
                   </td>
                 </tr>
@@ -500,7 +500,7 @@
                 text-rendering: optimizeLegibility;
                 margin-top: 20px !important;
               ">
-              Thank you! We look forward to meeting you.
+              Thank you! We look forward to appointment you.
             </p>
                  
             <!--[if mso]>
@@ -520,7 +520,7 @@
                 text-rendering: optimizeLegibility;
                 margin: 20px 0 !important;
               ">
-              Your meeting details:
+              Your appointment details:
             </p>
             <ul style="text-align: left;">
             <li style="margin-bottom:15px;">Title: <strong>{meetingTitle}</strong></li>
@@ -541,7 +541,7 @@
                 text-rendering: optimizeLegibility;
                 margin: 20px 0 !important;
               ">
-              The best way to get reminders to your meeting is to<br> <strong>add it to calendar</strong>.
+              The best way to get reminders to your appointment is to<br> <strong>add it to calendar</strong>.
             </p>  
             <div style="display: flex;align-items: center;">
             <a href="https://calendar.google.com/calendar/u/0/r/eventedit?text={meetingTitle}&dates={meetingDateInISO}&details={meetingDescription}&location={meetingLocation}" style="display: flex;justify-content: center;
@@ -614,38 +614,22 @@
                 -webkit-font-smoothing: antialiased;
                 font-family: 'Inter', 'Helvetica Neue', Helvetica, Arial,
                   sans-serif !important;
-                font-size: 18px;
+                font-size: 16px;
                 text-align: center;
+                color: #65735b;
                 letter-spacing: -0.1 !important;
                 line-height: 1.6 !important;
                 margin: 0px !important;
                 mso-line-height-rule: exactly;
                 text-rendering: optimizeLegibility;
               ">
-              If necessary, you can always
-<!--   TODO: ADD RESCHEDULE MEETING LINK  -->
-              <a href="" style="
-                  color: #0099ff !important;
-                  font-family: 'Inter', 'Helvetica Neue', Helvetica, Arial,
-                    sans-serif !important;
-                  text-decoration: underline;
-                  transition: color 0.2s;
-                ">reschedule your meeting</a>
-              or
-<!--   TODO: ADD CANCEL MEETING LINK  -->             
-              <a href="" style="
-                  color: #0099ff !important;
-                  font-family: 'Inter', 'Helvetica Neue', Helvetica, Arial,
-                    sans-serif !important;
-                  text-decoration: underline;
-                  transition: color 0.2s;
-                ">cancel your meeting</a>.
+              If necessary, you can always reschedule or cancel your appointment by contacting {vendorName} at {vendorEmail}.
             </p>
             <div class="space-60" style="height: 60px;">&nbsp;</div>
             <table border="0" cellpadding="0" cellspacing="0" width="100%"> <tbody> <tr> <td align="center" width="100%" style="color:#65735b;font-size:12px;line-height:24px;padding-bottom:30px;padding-top:30px"> <a href="" style="color:#65735b;text-decoration:underline" target="_blank" data-saferedirecturl="">Unsubscribe</a> &nbsp; | &nbsp; <a href="https://app.weshare.net/privacy-policy" style="color:#65735b;text-decoration:underline" target="_blank" data-saferedirecturl="https://app.weshare.net/privacy-policy">Privacy Policy</a> &nbsp; | &nbsp; <a href="mailto:support@weshare.net" target="_blank" data-saferedirecturl="mailto:support@weshare.net" style="color:#65735b">Contact Support</a> <div style="font-family:Helvetica,Arial,sans-serif;word-break:normal" class="m_368214561684033350address-link">
-Weshare inc. Derech Menachem Begin 144, Tel Aviv, Israel.
+Weshare inc. 600 N Broad Street, Suite 5 # 562 Middletown, DE 19709, USA.
 </div> <div style="font-family:Helvetica,Arial,sans-serif;word-break:normal">
-© 2021 Weshare Inc.
+© 2022 Weshare Inc.
 </div> </td> </tr> </tbody> </table>
             <div class="space-20" style="height: 20px;">&nbsp;</div>
             <!--[if mso]>
