--- a/emails/confirmEmail.html
+++ b/emails/confirmEmail.html
@@ -527,8 +527,7 @@
                 text-rendering: optimizeLegibility;
                 margin-top: 20px !important;
               ">
-              Verifying your email address will ensure continued access to your account.<br><br>
-            If this wasn't you, please let us know at support@weshare.net
+              Verifying your email address will ensure continued access to your account.
             </p>
             
 
@@ -537,7 +536,7 @@
               <tr>
                 <td align="left" style="border:0;padding:0">
             <![endif]-->
-            <div class="space-60" style="height: 60px;">&nbsp;</div>
+            <div class="space-20" style="height: 35px;">&nbsp;</div>
             <p class="size-m" style="
                 -webkit-font-smoothing: antialiased;
                 font-family: 'Inter', 'Helvetica Neue', Helvetica, Arial,
@@ -549,7 +548,8 @@
                 mso-line-height-rule: exactly;
                 text-rendering: optimizeLegibility;
               ">
-              We love hearing from you!
+              If this wasn't you, please let us know at support@weshare.net<br><br>
+                We love hearing from you!
               <a href="mailto:support@weshare.net" style="
                   color: #0099ff !important;
                   font-family: 'Inter', 'Helvetica Neue', Helvetica, Arial,
