--- a/emails/email_reminders/customer/orderConfirmation.html
+++ b/emails/email_reminders/customer/orderConfirmation.html
@@ -500,7 +500,7 @@
                 text-rendering: optimizeLegibility;
                 margin-top: 20px !important;
               ">
-              Thank you! We look forward to appointment you.
+              Thank you! We look forward to meeting you.
             </p>
                  
             <!--[if mso]>
